--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -53,3 +53,23 @@ p {
     margin: 0;
     padding: 0;
 }
+
+.btn-city {
+    padding: 12px 28px;
+    background: #7360DF;
+    border-radius: 10px;
+    color: white;
+    letter-spacing: 1px;
+    box-shadow: 0 0 5px #dfce70,
+    0 0 25px #dfce70;
+    margin-bottom: 20px;
+}
+
+.btn-city:hover {
+    background: #7360DF;
+    box-shadow: 0 0 5px #dfce70,
+    0 0 25px #dfce70;
+    color: white;
+
+    
+}
