--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,6 +2,18 @@ header {
     background: linear-gradient(to right, #7360DF, black);
 }
 
+main {
+    min-height: 100vh;
+    background-image: url(../imgs/bg1.jpg);
+    
+    background-size: cover;
+    background-position: center;
+}
+
+.h3-custom {
+    font-weight: bold;
+}
+
 .btn {
     font-size: 1.3rem;
     text-decoration: none;
@@ -10,7 +22,7 @@ header {
     display: block;
     margin: 5px 0;
     border-radius: 0.3rem;
-    color: #ccdad1;
+    color: white;
     border: none;
     outline: none;
     background-color: #6f6866;
@@ -20,7 +32,7 @@ header {
 }
   
 .btn:hover {
-color: #ccdad1;
+color: white;
 background-color: #788585;
 transform: translate(0, 0);
 box-shadow: 2px 2px #38302e;
@@ -55,15 +67,14 @@ p {
     border-radius: 10px;
     color: white;
     letter-spacing: 1px;
-    box-shadow: 0 0 5px #dfce70,
-    0 0 25px #dfce70;
+    box-shadow: 0 0 5px #709bdf;
     margin-bottom: 20px;
+    text-transform: uppercase;
 }
 
 .btn-city:hover {
     background: #7360DF;
-    box-shadow: 0 0 5px #dfce70,
-    0 0 25px #dfce70;
+    box-shadow: 0 0 5px #70addf;
     color: white;
 
     
