Alert customized added, ReadMe file modified

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,7 +5,6 @@ header {
 main {
     min-height: 100vh;
     background-image: url(../imgs/bg1.jpg);
-    
     background-size: cover;
     background-position: center;
 }
@@ -81,17 +80,19 @@ p {
 }
 
 .card-custom {
-    background: linear-gradient(to bottom, #9383ea, rgb(120, 113, 148));
-    margin-bottom: 2rem;
+    position: relative;
+    width: 20%;
     
 }
+.card-individual {
+    background: linear-gradient(to bottom, #7360DF, rgb(84, 85, 87));
+}
 
-@media (min-width: 768px) {
+
+@media (max-width: 768px) {
     /* Tus estilos aquí */
     .card-custom {
-        flex: 1; /* Para que cada tarjeta ocupe el mismo espacio y distribuya el ancho disponible */
-        margin: 0 1%; /* Agrega un margen entre las tarjetas */
-        /* Ajusta el ancho máximo teniendo en cuenta el margen */
-    
+        width: 100%;
+        margin-bottom: 2rem;
     }
 }
